--- a/.github/workflows/gm-cron.yaml
+++ b/.github/workflows/gm-cron.yaml
@@ -74,6 +74,9 @@ jobs:
           if [[ $test_dir =~ 't/plugin' ]]; then
             echo "type=plugin" >>$GITHUB_OUTPUT
           fi
+          if [[ $test_dir =~ 't/stream-node/discovery' ]]; then
+            echo "type=first" >>$GITHUB_OUTPUT
+          fi
           if [[ $test_dir =~ 't/admin ' ]]; then
             echo "type=first" >>$GITHUB_OUTPUT
           fi
