--- a/.github/workflows/gm-cron.yaml
+++ b/.github/workflows/gm-cron.yaml
@@ -20,8 +20,8 @@ jobs:
         test_dir:
           - t/plugin/[a-k]*
           - t/plugin/[l-z]*
-          - t/admin t/cli t/config-center-yaml t/control t/core t/debug t/deployment t/discovery t/error_page t/misc
-          - t/node t/pubsub t/router t/script t/stream-node t/utils t/wasm t/xds-library t/xrpc
+          - t/admin t/cli t/config-center-yaml t/control t/core t/debug t/deployment t/discovery t/error_page t/misc t/stream-node
+          - t/node t/pubsub t/router t/script t/utils t/wasm t/xds-library t/xrpc
 
     runs-on: ${{ matrix.platform }}
     timeout-minutes: 90
@@ -73,9 +73,6 @@ jobs:
           test_dir="${{ matrix.test_dir }}"
           if [[ $test_dir =~ 't/plugin' ]]; then
             echo "type=plugin" >>$GITHUB_OUTPUT
-          fi
-          if [[ $test_dir =~ 't/stream-node/discovery' ]]; then
-            echo "type=first" >>$GITHUB_OUTPUT
           fi
           if [[ $test_dir =~ 't/admin ' ]]; then
             echo "type=first" >>$GITHUB_OUTPUT
