--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -229,6 +229,7 @@ nginx_config:                     # config for render the template to generate n
       internal-status: 10m
       plugin-limit-req: 10m
       plugin-limit-count: 10m
+      plugin-limit-cu: 10m
       prometheus-metrics: 10m
       plugin-limit-conn: 10m
       upstream-healthcheck: 10m
@@ -238,6 +239,7 @@ nginx_config:                     # config for render the template to generate n
       balancer-ewma-locks: 10m
       balancer-ewma-last-touched-at: 10m
       plugin-limit-count-redis-cluster-slot-lock: 1m
+      plugin-limit-cu-redis-cluster-slot-lock: 1m
       tracing_buffer: 10m
       plugin-api-breaker: 10m
       etcd-cluster-health-check: 10m
@@ -448,6 +450,7 @@ plugins:                          # plugin list (sorted by priority)
   - hmac-auth                      # priority: 2530
   - basic-auth                     # priority: 2520
   - jwt-auth                       # priority: 2510
+  - path-key-extractor             # priority: 2501
   - key-auth                       # priority: 2500
   - consumer-restriction           # priority: 2400
   - forward-auth                   # priority: 2002
@@ -459,6 +462,9 @@ plugins:                          # plugin list (sorted by priority)
   - proxy-rewrite                  # priority: 1008
   - workflow                       # priority: 1006
   - api-breaker                    # priority: 1005
+  - calculate-cu                   # priority: 1012
+  - limit-monthly-cu               # priority: 1011
+  - limit-cu                       # priority: 1010
   - limit-conn                     # priority: 1003
   - limit-count                    # priority: 1002
   - limit-req                      # priority: 1001
