--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
         uses: docker/login-action@v1.10.0
         with:
           registry: ghcr.io/unifra20/apisix
-          username: danielsunifra
-          password: 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
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push to GitHub Packages
         run: |
           docker build -t ghcr.io/unifra20/apisix:${{ github.sha }} -f docker/Dockerfile .
