--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,11 @@ name: Publish Docker image
 
 on:
   push:
-    branches:
-      - master
+    branches: [main]
+    tags:
+      - "v*"
+  pull_request:
+    branches: [main]
 
 jobs:
   package:
