--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Publish Docker image
 on:
   push:
     tags:
-      - '*'
+      - 'v*'
 
 env:
-  REGISTRY: ghcr.io
+  REGISTRY: ghcr.io/unifra20/apisix
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -22,14 +22,8 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}      
       
       - name: Push to GitHub Packages
         run: |
-          docker build -t ${{ steps.meta.outputs.tags }} -f docker/Dockerfile .
-          docker push ${{ steps.meta.outputs.tags }}
+          docker build -t ${{ env.REGISTRY }}:${{ steps.get_version.outputs.VERSION }} -f docker/Dockerfile .
+          docker push ${{ env.REGISTRY }}:${{ steps.get_version.outputs.VERSION }}
