--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,22 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [master, 'release/**']
-    paths-ignore:
-      - 'docs/**'
-      - '**/*.md'
-  pull_request:
-    branches: [master, 'release/**']
-    paths-ignore:
-      - 'docs/**'
-      - '**/*.md'
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref == 'refs/heads/master' && github.run_number || github.ref }}
-  cancel-in-progress: true
-
-permissions:
-  contents: read
+    branches: ['fix/decrease-ci-time']
 
 jobs:
   build:
