--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,9 +80,9 @@ jobs:
         name: Load saved docker images
         run: |
           if [[ -f docker-images-buckup/apisix-images.tar ]]; then
-            echo "load saved images..., time: `date`"
+            echo "load saved images..., time: $(date)"
             docker load --input docker-images-buckup/apisix-images.tar
-            echo "load saved images done, time: `date`"
+            echo "load saved images done, time: $(date)"
             if [[ ${{ steps.test_env.outputs.type }} == 'last' ]]; then
               # generating SSL certificates for Kafka
               sudo keytool -genkeypair -keyalg RSA -dname "CN=127.0.0.1" -alias 127.0.0.1 -keystore ./ci/pod/kafka/kafka-server/selfsigned.jks -validity 365 -keysize 2048 -storepass changeit
@@ -95,49 +95,49 @@ jobs:
             if [[ ${{ steps.test_env.outputs.type }} != 'first' ]]; then
               sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh
             fi
-            echo "lanuch saved images done, time: `date`"
+            echo "lanuch saved images done, time: $(date)"
           fi
       - if: ${{ steps.cache-images.outputs.cache-hit != 'true' }}
         name: Linux lanuch services
         run: |
-          echo "start common service..., time: `date`"
+          echo "start common service..., time: $(date)"
           make ci-env-up project_compose_ci=ci/pod/docker-compose.common.yml
-          echo "start common service done, time: `date`"
+          echo "start common service done, time: $(date)"
           if [[ ${{ steps.test_env.outputs.type }} == 'first' ]]; then
             # launch deps env
-            echo "start first service ..., time: `date`"
+            echo "start first service ..., time: $(date)"
             make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
-            echo "start first service done, time: `date`"
+            echo "start first service done, time: $(date)"
           fi
           
           if [[ ${{ steps.test_env.outputs.type }} == 'plugin' ]]; then
-            echo "start plugin service ..., time: `date`"
+            echo "start plugin service ..., time: $(date)"
             # download keycloak cas provider
             sudo wget https://github.com/jacekkow/keycloak-protocol-cas/releases/download/18.0.2/keycloak-protocol-cas-18.0.2.jar -O /opt/keycloak-protocol-cas-18.0.2.jar
             sh ci/pod/openfunction/build-function-image.sh
             make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
             sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh
-            echo "start plugin service done, time: `date`"
+            echo "start plugin service done, time: $(date)"
           fi
           if [[ ${{ steps.test_env.outputs.type }} == 'last' ]]; then
-            echo "start last service ..., time: `date`"
+            echo "start last service ..., time: $(date)"
             # generating SSL certificates for Kafka
             sudo keytool -genkeypair -keyalg RSA -dname "CN=127.0.0.1" -alias 127.0.0.1 -keystore ./ci/pod/kafka/kafka-server/selfsigned.jks -validity 365 -keysize 2048 -storepass changeit
             make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
             sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh
-            echo "start last service done, time: `date`"
+            echo "start last service done, time: $(date)"
           fi
-          echo "started backing up, time: `date`"
+          echo "started backing up, time: $(date)"
           mkdir docker-images-buckup
-          sum=` cat ci/pod/docker-compose.common.yml|grep image |wc -l`
-          common_tag=`cat ci/pod/docker-compose.common.yml|grep image:|awk '{print $2}'|awk 'ORS=NR%"'$sum'"?" ":"\n"{print}'`
+          sum=$( cat ci/pod/docker-compose.common.yml|grep image |wc -l)
+          common_tag=$(cat ci/pod/docker-compose.common.yml|grep image:|awk '{print $2}'|awk 'ORS=NR%"'$sum'"?" ":"\n"{print}')
           echo common tag: $common_tag
-          sum=` cat ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml|grep image |wc -l`
-          special_tag=`cat ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml|grep image:|awk '{print $2}'|awk 'ORS=NR%"'$sum'"?" ":"\n"{print}'`
+          sum=$( cat ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml|grep image |wc -l)
+          special_tag=$(cat ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml|grep image:|awk '{print $2}'|awk 'ORS=NR%"'$sum'"?" ":"\n"{print}')
           echo special: $special_tag
-          openwhisk_tag="openwhisk/action-nodejs-v14:nightly openwhisk/standalone:nightly
+          openwhisk_tag="openwhisk/action-nodejs-v14:nightly openwhisk/standalone:nightly"
           docker save $common_tag $special_tag $openwhisk_tag -o docker-images-buckup/apisix-images.tar
-          echo "docker save done, time `date`"
+          echo "docker save done, time: $(date)"
       - name: Setup tmate session
         if: always()
         uses: mxschmitt/action-tmate@v3
