--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,7 +114,7 @@ jobs:
             echo "start plugin service ..., time: $(date)"
             # download keycloak cas provider
             sudo wget https://github.com/jacekkow/keycloak-protocol-cas/releases/download/18.0.2/keycloak-protocol-cas-18.0.2.jar -O /opt/keycloak-protocol-cas-18.0.2.jar
-            sh ci/pod/openfunction/build-function-image.sh
+            bash ci/pod/openfunction/build-function-image.sh
             make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
             sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh
             echo "start plugin service done, time: $(date)"
