--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -154,8 +154,11 @@ jobs:
           done
 
           echo to pull : $to_pull
-
+          if ! [ -z $to_pull ]
+          then
           echo $to_pull | xargs -P10 -n1 docker pull
+          fi
+          
           docker save $common_tag $special_tag $openwhisk_tag -o docker-images-buckup/apisix-images.tar
           echo "docker save done, time: $(date)"
       # - name: Setup tmate session
