--- a/docs/zh/latest/config.json
+++ b/docs/zh/latest/config.json
@@ -234,6 +234,10 @@
     },
     {
       "type": "doc",
+      "id": "deployment-modes"
+    },
+    {
+      "type": "doc",
       "id": "FAQ"
     },
     {
