--- a/.github/workflows/kubernetes-ci.yml
+++ b/.github/workflows/kubernetes-ci.yml
@@ -72,15 +72,17 @@ jobs:
 
           openssl req -new -key ./t/certs/k8s_mtls.key -config ./t/certs/k8s_mtls_csr.conf -out ./t/certs/k8s_mtls.csr -nodes
 
-          BASE64_CSR=$(cat ./t/certs/k8s_mtls.csr | base64 | tr -d '\n')
+          export BASE64_CSR=$(cat ./t/certs/k8s_mtls.csr | base64 | tr -d '\n')
 
-          cat ./t/certs/k8s_mtls_csr.yaml | envsubst | kubectl apply -f -
+          envsubst < ./t/certs/k8s_mtls_csr.yaml | kubectl apply -f -
 
           kubectl certificate approve k8s-mtls-csr
 
           kubectl get csr k8s-mtls-csr -o jsonpath='{.status.certificate}' | base64 --decode > ./t/certs/k8s_mtls.pem
 
-          kubectl get secrets | grep apisix-test | awk '{system("kubectl get secret -o jsonpath=\"{.data.ca\.crt}\" "$1" | base64 -d")}' > ./t/certs/k8s_mtls_ca.pem
+          kubectl get secrets | grep mtls-client | awk '{system("kubectl get secret -o jsonpath=\"{.items[0].data}\"  $1")}'| jq -r '."ca.crt"' | base64 -d > ./t/certs/k8s_mtls_ca.pem
+
+          cat ./t/certs/k8s_mtls_ca.pem
 
           export KUBERNETES_APISERVER_ADDR=$(kubectl -n kube-system get pod -l component=kube-apiserver -o=jsonpath="{.items[0].metadata.annotations.kubeadm\.kubernetes\.io/kube-apiserver\.advertise-address\.endpoint}" | awk -F: '{print $1}')
 
