--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -47,5 +47,6 @@ header:
     - 't/plugin/authz-casbin'
     - 't/coredns'
     - 'autodocs/'
+    - 't/grpc_server_example/proto/google'
 
   comment: on-failure
